--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
  </head>
  <body>
     <h1> Devops 2023</h1>
-     <h2> Testing CI/CD Github-Jenkins-Site 2023</h2>
+     <h2> Testing CI/CD Github-Jenkins 2023</h2>
  </body>
 </html>
